<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/overlay_step_four"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


                <TextView
                    android:id="@+id/tv_step"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/stepFourTitle"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"  />


                <TextView
                    android:id="@+id/tv_step_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/stepFour"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_step" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tf_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/hintStepFour"
                    app:boxBackgroundColor="#00FFFFFF"
                    app:boxCornerRadiusBottomEnd="15dp"
                    app:boxCornerRadiusBottomStart="15dp"
                    app:boxStrokeColor="#ffffff"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_step_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/te_when"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="68dp"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    app:backgroundTint="#515E7B75"
                    app:cornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tf_layout"
                    app:strokeColor="@color/white"
                    app:strokeWidth="2dp" />




</androidx.constraintlayout.widget.ConstraintLayout>